2007-05-17  Stefan Jahn  <stefan@lkcc.org>

	* mutualx.cpp: Tried to fix the Z-matrix representation.

2007-05-14  Stefan Jahn  <stefan@lkcc.org>

	* mutualx.cpp: Finished implementation of multiple mutual inductor
	component (S-parameter callback).

2007-05-13  Stefan Jahn  <stefan@lkcc.org>

	* mutualx.h (class mutualx): New component.  General multiple
	mutual inductances.  TODO: S-parameters.

2007-05-01  Stefan Jahn  <stefan@lkcc.org>

	* devices/eqndefined.cpp: Fixed bug occuring when there are
	multiple instances of an EDD enclosed in a sub-circuit.  These
	reuse the equations in the environment.

2007-04-28  Stefan Jahn  <stefan@lkcc.org>

	* devices/eqndefined.cpp: Allowing I1, I2, etc. in charge
	equations for now.  Some more bug fixes.

2007-04-23  Stefan Jahn  <stefan@lkcc.org>

	* devices/eqndefined.cpp: Fixed bug when using the EDD in a
	subcircuit.

2007-04-19  Stefan Jahn  <stefan@lkcc.org>

	* devices/eqndefined.cpp (calcHB): Added HB callbacks.  Fixed
	bug in DC calculations.

2007-04-18  Stefan Jahn  <stefan@lkcc.org>

	* devices/eqndefined.h (class eqndefined): Added the equation
	defined device (i.e. explicit equations for I(V) and Q(V)).

2007-04-15  Stefan Jahn  <stefan@lkcc.org>

	* vexp.h (class vexp), iexp.h (class iexp): New components:
	exponential voltage and current pulse sources.

2007-03-11  Stefan Jahn  <stefan@lkcc.org>

	* vac.cpp, iac.cpp: Adjusted time dependency of damping
	factor.

	* microstrip/mscross.cpp: Compute omega only once.

	* microstrip/bondwire.cpp: Fixed some typos in the doxygen
	documentation/comments.

2007-03-07  Stefan Jahn  <stefan@lkcc.org>

	* twistedpair.cpp: Again fixed attenuation model.  Added
	an appropriate DC model.

2007-03-06  Stefan Jahn  <stefan@lkcc.org>

	* twistedpair.cpp: Added preliminary loss model as well as
	the noise models for AC and SP due to the losses.

2007-03-01  Stefan Jahn  <stefan@lkcc.org>

	* devices/diode.cpp: Fixed derivative for knee current.
