@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 51 Franklin Street - Fifth Floor,
  * Boston, MA 02110-1301, USA.  
  *
- * $Id: mutualx.h,v 1.2 2007/05/14 20:40:48 ela Exp $
+ * $Id: mutualx.h,v 1.3 2007/05/21 16:29:16 ela Exp $
  *
  */
 
@@ -38,6 +38,7 @@ class mutualx : public circuit
 
  private:
   matrix calcMatrixZ (nr_double_t);
+  matrix calcMatrixY (nr_double_t);
 };
 
 #endif /* __MUTUALX_H__ */
